Correção de problemas e implementação de padrões baseado na LGPD